--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build web
         run: |
           flutter build web --release \
-            --base-href "/${{ github.event.repository.name }}/"
+            --base-href "/Clinic-Web/"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
